--- a/style.css
+++ b/style.css
@@ -1,5 +1,22 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   font-family: sans-serif;
+}
+
+.container {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product {
+  width: 825px;
+  border: 4px solid black;
+  margin: 25px auto;
 }
 
 article {
@@ -10,6 +27,7 @@ article {
   text-align: center;
   background-color: #f7f7f7;
   text-transform: uppercase;
+  padding: 15px;
 }
 
 .price {
@@ -21,10 +39,13 @@ article {
   font-weight: bold;
   font-size: 12px;
   color: #777;
+  margin-bottom: 20px;
 }
 
-.more:link {
+.more {
   color: black;
+  margin-top: 10px;
+  padding-top: ;
 }
 
 .listelements {
@@ -42,6 +63,8 @@ article {
   border: none;
   font-size: 20px;
   text-transform: uppercase;
+  width: 100%;
+  padding: 10px;
 }
 .more:hover,
 .more:visited {
@@ -52,4 +75,12 @@ article {
   background-color: transparent;
   color: black;
   cursor: pointer;
+  border-color: black;
+  border-style: solid;
+  border-width: 2px;
+}
+
+li {
+  margin-bottom: 10px;
+  margin-left: 20px;
 }
