--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ article {
 .heading2 {
   text-transform: uppercase;
   font-size: 20px;
+  margin-top: 30px;
+  margin-bottom: 15px;
 }
 
 .button {
@@ -75,9 +77,7 @@ article {
   background-color: transparent;
   color: black;
   cursor: pointer;
-  border-color: black;
-  border-style: solid;
-  border-width: 2px;
+  border-top: 4px solid black;
 }
 
 li {
